# gem-stocks

./: README.md  pyproject.toml  requirements.txt
app/: main.py  stocks.py
app/api/: routes.py
app/services/: downloader.py  filter.py
scripts/: run_all.py
