[project]
name = "gem-stocks"
version = "0.1.0"
description = ""
authors = [
    {name = "minzunim",email = "greenteapig6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
